--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  scrollbar-gutter: stable;
 }
 
 a {
@@ -31,6 +32,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   padding-right: 0 !important;
+  scrollbar-gutter: stable;
 }
 
 body.noscroll {
